# arete

./: .gitignore  .release-please-manifest.json  Cargo.toml  PLAN-hs-stream.md  README.md  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release-recovery.yml
arete/: CHANGELOG.md  Cargo.toml
arete-macros/: CHANGELOG.md  Cargo.toml
arete-macros/src/: idl_codegen.rs  lib.rs
arete-macros/tests/: key_resolution_dynamic.rs  phase1_runtime.rs
arete/src/: lib.rs
cli/: CHANGELOG.md  Cargo.toml  README.md
cli/src/: api_client.rs  main.rs
docs/: ast-versioning-guide.md  astro.config.mjs  installation.mdx
docs/public/: agent.md  skill.md
examples/ore-react/: package.json
examples/ore-rust/: Cargo.toml
examples/ore-rust/src/: main.rs
examples/ore-server/: Cargo.toml
examples/ore-typescript/: package.json
hyperstack/: CHANGELOG.md  Cargo.toml
hyperstack-idl/: CHANGELOG.md  Cargo.toml
hyperstack-idl/src/: search.rs  snapshot.rs
hyperstack-idl/tests/: parse_fixtures.rs
hyperstack-macros/: CHANGELOG.md  Cargo.toml
hyperstack-macros/src/: idl_codegen.rs
hyperstack-macros/tests/: key_resolution_dynamic.rs  phase2_dynamic.rs  phase3_dynamic.rs
hyperstack/src/: lib.rs
interpreter/: CHANGELOG.md  Cargo.toml
interpreter/src/: ast.rs  compiler.rs  debugger.rs  lib.rs  resolvers.rs  rust.rs  (+6 more)
scripts/: build-local-packages.sh  generate-example-sdks.sh  prepare-example-templates.sh  update-example-versions.sh
stacks/: README.md
stacks/sdk/rust/: CHANGELOG.md  Cargo.toml
stacks/sdk/rust/src/ore/: mod.rs  types.rs
(+167 files in other folders)
