[package]
name = "ore-rust-example"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
arete-sdk = { package = "arete-a4-sdk", path = "../../rust/arete-a4-sdk", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
