[package]
name = "arete-stacks"
version = "0.1.0"
edition.workspace = true
license = "MIT"
repository.workspace = true
authors.workspace = true
description = "Protocol stacks for Arete - ready-to-use Solana data streams"
readme = "README.md"
documentation = "https://docs.rs/arete-stacks"
keywords = ["arete", "solana", "blockchain", "streaming"]
categories = ["api-bindings", "web-programming"]

[features]
default = ["ore"]
ore = []
full = ["ore"]

[dependencies]
arete-sdk = { package = "arete-a4-sdk", version = "0.1.0", path = "../../../rust/arete-a4-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
